--- a/Frontends/UdemyCarBook.WebUI/Views/About/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/About/Index.cshtml
@@ -3,4 +3,4 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/Index.cshtml";
 }
-<!-- <h1>RenderBodynin nasıl çalıştığını öğreniyorum</h1>-->
+@await Component.InvokeAsync("_AboutUsComponentPartial")
